syntax = "proto3";

package service;


//Service
service Secrets{
        rpc List(ListReq) returns(ListResp){}
        rpc Mutate(MutateReq) returns(MutateResp){}
}



//Other messages
message KV {
        string key = 1;
        string value = 2;
}

message Label {
        repeated KV labels = 1;
}

message Data {
        repeated KV data = 1;
}


// Requests
message ListReq {
        string region_id = 1;
        string cluster_id = 2;
        Label labels = 3;
        string kind = 4;
}

message MutateReq{
         string region_id = 1;
         string cluster_id = 2;
         Label label = 3;
         Data data = 4;
         string kind = 5;
}


// Replys
message ListResp {
        string error = 1;
        repeated KV data = 2;
}

message MutateResp{
        string error = 1;
}